# sod-lk

./: .gitignore  LICENSE  README.md
src/: BUILD.gn
src/arch/: arm_cortex_2s.ld  memory_macros.h
src/arch/arm/cortex-m/: interrupt_types.h  memory_map.h  nested_interrupt_controller.cc  nested_interrupt_controller.h  reset_clock_control_block.h  system_control_block.cc  system_control_block.h
src/bootstrap/blinker/: BUILD.gn  interrupt_types.h  main.cc  startup.c
src/project/: BUILD.gn
src/project/bare/blinker/: main.cc
tools/linux64/: gn
