# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("bare_blinker") {
  sources = [
    "bare/blinker/main.cc",
    "//arch/arm/cortex-m/startup.c",
    "//arch/arm/cortex-m/system_control_block.cc"
  ]
}

